[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Inventory/Equipment/Slot/Slot_Over.svg" type="Texture" id=1]
[ext_resource path="res://UI/Inventory/Equipment/Slot/Slot_Under.svg" type="Texture" id=2]
[ext_resource path="res://UI/Inventory/Equipment/Slot/Slot_HP.svg" type="Texture" id=3]
[ext_resource path="res://UI/Inventory/Equipment/Slot/Slot.gd" type="Script" id=4]

[node name="Slot" type="TextureButton"]
self_modulate = Color( 0, 0, 0, 1 )
texture_normal = ExtResource( 2 )
script = ExtResource( 4 )

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 30.0
margin_bottom = 30.0
stretch_mode = 4

[node name="Border" type="TextureRect" parent="."]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="."]
margin_right = 30.0
margin_bottom = 30.0
stretch_mode = 4

[node name="HP" type="TextureProgress" parent="."]
visible = false
margin_left = 3.0
margin_top = 26.0
margin_right = 27.0
margin_bottom = 27.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="Size" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 15.0
margin_right = 10.0
margin_bottom = 29.0
rect_scale = Vector2( 0.8, 0.8 )
text = "1"

[node name="Config" type="TextureButton" parent="."]
margin_right = 30.0
margin_bottom = 30.0
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Slot_button"]
